2008-08-27  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c (totem_dvb_setup_result):
	Always try to play whatever's supposed to be playing
	after a successful channels setup (Closes: #548539)

2008-08-26  Philip Withnall  <philip@tecnocode.co.uk>

	* data/playlist.ui:
	* src/totem-playlist.c: (init_treeview):
	* src/totem-session.c: Move the playlist treeview model to the
	GtkBuilder UI file. Also remove an extraneous #include.
	(Closes: #454243)

2008-08-26  Philip Withnall  <philip@tecnocode.co.uk>

	* data/totem.1: Update the man page to remove documentation for a now
	non-existent --usage option and freshen up the rest of the
	documentation. (Closes: #548855)

2008-08-26  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c (size_changed_cb):
	When changing screen size through XRandR, update the aspect
	ratio of the visualisation (Closes: #327811)

2008-08-26  Bastien Nocera  <hadess@hadess.net>

	* data/mime-functions.sh: Fix a stupid typo
	* data/schemas.sh: Fix another stupid typo,
	and output to fd 3, so we can see the stderr
	* data/Makefile.am: capture fd 3 for the gconf updater
	script
	* data/mime-type-list.txt: Add audio/x-vorbis+ogg to
	the mime-types (Closes: #549038)

2008-08-26  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/tests/.htaccess: Add mime-type for
	a test

2008-08-26  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c (totem_action_remote): Remove old debug

2008-08-22  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c
	(video_widget_size_allocate_cb), (totem_embedded_construct):
	Don't show visuals if the video widget size is under 150 pixels
	(Closes: #542491)

2008-08-21  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-missing-plugins.h:
	* src/backend/bacon-video-widget-gst-missing-plugins.c
	(bacon_video_widget_gst_missing_plugins_blacklist):
	There's some plugins we just don't want to use, like